--- a/we-care.html
+++ b/we-care.html
@@ -30,7 +30,7 @@
                 <h1>WE CARE</h1>
                 <H2>About Your Pet 1</H2>
                 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti veniam vero molestias magnam excepturi voluptatum, odit ab saepe doloremque numquam non dicta magni nemo aperiam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti veniam vero molestias magnam excepturi voluptatum, odit ab saepe doloremque .</p>
                 <button class="botao-explore">EXPLORE</button>
                 
             </div>
