--- a/GitHub.html
+++ b/GitHub.html
@@ -21,7 +21,7 @@
     Git add (stage changes) -> Git Commit -> Git Push
 
     - Git com linha de comando
-        Git init - Inicializa um novo repositório para fazerum commit
+        Git init - Inicializa um novo repositório para fazerum commit.
         Git Clear - limpa toda tela do terminal
         Git status - mostra informações do projeto, bem como se tem alterações em algum     código.
         git add <nome do arquivo> - manda o aruivo modificado para o repositório aguardando o commit
