--- a/GitHub.html
+++ b/GitHub.html
@@ -6,7 +6,7 @@
 
    -Repositório- Uma pasta uma junta todos as arquivos separados para criar um Commit e fazer uma push para o github permiter monitorar tudo que foi editado modificado no projeto.
 
-   -Commit- Uma foto dos arquivos separados prontos para subir ao Github, aguardando apenas o comando de publish.
+   -Commit- Uma foto dos arquivos separados prontos para subir ao Github, aguardando apenas o comando de publish..
 
    -Extensões no VSCode - 
    Git Graph- Monitora toda linha do tempo de alteração no arquivo, informando todos os dados de quem atualizou o projeto.
