primeira-Branch-na-pratica

--- a/GitHub.html
+++ b/GitHub.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projeto Github</title>
+</head>
+<body>
+    <h1>
+        Aula Branch
+    </h1>
+    <p>
+        Todo comentário abaixo é sobre o módulo git GitHub
+    </p>
+</body>
+</html>
+
 <!--
     Git e GitHub
     -Git é um programa feito para criar versões dos códigos, usado no VScode onde cria os repositórios criando (commits)=uma foto do que foi criado. Permite monitorar toda linha do tempo mapeando tudo que foi feito no código.
@@ -27,5 +44,10 @@
         git add <nome do arquivo> - manda o aruivo modificado para o repositório aguardando o commit
         Git commit -m"mensagem da alteração"
         Git Push - Envia os arquivos para o Github
-        Git add . - manda todos arquivos modificados e prepara para o commit (changes para stages)
+        Git add . - manda todos arquivos modificados e prepara para o commit (changes para stages-)4hb
+
+    - Branch
+            Criação de outros códigos usanod como base um código master, mas sem interferir no principal até que seja dado comando para fusão dos códigos.
+            Pode ser criado a quantidade de Branch que desejar, principalmente quando tem vários devs trabalhando no mesmo projeto. 
+        
 -->
