--- a/GitHub.html
+++ b/GitHub.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Github branch</title>
+    <title>Projeto Github branch teste</title>
 </head>
 <body>
     <h1>
-        Aula Branch
+        Aula Branch 1
     </h1>
     <p>
         Todo comentário abaixo é sobre o módulo git GitHub
