alteração no <p> pull

--- a/GitHub.html
+++ b/GitHub.html
@@ -11,6 +11,7 @@
     </h1>
     <p>
         Todo comentário abaixo é sobre o módulo git GitHub
+        Aula teste fazendo pull, salvar mudanças do Git para o vscode
     </p>
 </body>
 </html>
